syntax = "proto3";

package AkkaESPoC.Shared.Serialization.Proto;

import "google/protobuf/timestamp.proto";

message DecimalValue {

    // Whole units part of the amount
    int64 units = 1;

    // Nano units of the amount (10^-9)
    // Must be same sign as units
    sfixed32 nanos = 2;
}

/* Events */
message QuestCreated{
    QuestData Data = 1;
}

message MemberJoined{
    string QuestId = 1;
    repeated string MemberName = 2;
    int32 DaysIn = 3;
}

message MemberDeparted{
    string QuestId = 1;
    repeated string MemberName = 2;
    int32 DaysIn = 3;
}

message CharacterSlayed{
    string QuestId = 1;
    repeated string CharacterName = 2;
    int32 DaysIn = 3;
}

message ArrivedAtLocation{
    string QuestId = 1;
    string Location = 2;
    int32 DaysIn = 3;
}


// Discriminated Union for passing around multiple events at once
message QuestEvent{
    QuestCreated QuestCreated = 1;
    MemberJoined MemberJoined = 2;
    MemberDeparted MemberDeparted = 3;
    CharacterSlayed CharacterSlayed = 4;
    ArrivedAtLocation ArrivedAtLocation = 5;
}

/* Commands */
message CreateQuest{
    string QuestId = 1;
    string QuestName = 2;
    string Location = 3;
}

message JoinQuest{
    string QuestId = 1;
    int32 DaysIn = 2;
    repeated string MemberNames = 3;
}

message DepartQuest{
    string QuestId = 1;
    int32 DaysIn = 2;
    repeated string MemberNames = 3;
}

message SlayCharacter{
    string QuestId = 1;
    int32 DaysIn = 2;
    repeated string CharacterNamesNames = 3;
}

message ArriveAtLocation{
    string QuestId = 1;
    int32 DaysIn = 2;
    string Location = 3;
}

message QuestCommandResponse{
    string QuestId = 1;
    repeated QuestEvent Events = 2;
    bool Success = 3;
    string Message = 4;
}

message FetchAllQuestsResponse{
    repeated QuestData Quests = 1;
}

message FetchQuest{
    string QuestId = 1;
}

/* State */
message QuestData{
    string QuestId = 1;
    string QuestName = 2;
    string Location = 3;
    int32 DaysIn = 4;
    repeated string Members = 5;
    repeated string Slayed = 6;
}

message QuestState{
    QuestData Data = 1;
    repeated MemberJoined MembersJoined = 2;
    repeated MemberDeparted MembersDeparted = 3;
    repeated ArrivedAtLocation LocationArrivals = 4;
    repeated CharacterSlayed CharactersSlayed= 5;
}